--- a/index.html
+++ b/index.html
@@ -4,22 +4,37 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/pokeball-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Guess Pokémon from silhouettes and compete on leaderboards! A fun, interactive web game for Pokémon fans." />
-    <meta name="keywords" content="pokemon, game, guessing, silhouette, leaderboard, pokemon game" />
+    <meta
+      name="description"
+      content="Guess Pokémon from silhouettes and compete on leaderboards! A fun, interactive web game for Pokémon fans."
+    />
+    <meta
+      name="keywords"
+      content="pokemon, game, guessing, silhouette, leaderboard, pokemon game"
+    />
     <meta name="author" content="Who's That Pokémon" />
-    
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://whosthatpokemon.com/" />
     <meta property="og:title" content="Who's That Pokémon - Guess & Compete!" />
-    <meta property="og:description" content="Test your Pokémon knowledge! Guess Pokémon from silhouettes and climb the leaderboards." />
+    <meta
+      property="og:description"
+      content="Test your Pokémon knowledge! Guess Pokémon from silhouettes and climb the leaderboards."
+    />
     <meta property="og:image" content="/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://whosthatpokemon.com/" />
-    <meta property="twitter:title" content="Who's That Pokémon - Guess & Compete!" />
-    <meta property="twitter:description" content="Test your Pokémon knowledge! Guess Pokémon from silhouettes and climb the leaderboards." />
+    <meta
+      property="twitter:title"
+      content="Who's That Pokémon - Guess & Compete!"
+    />
+    <meta
+      property="twitter:description"
+      content="Test your Pokémon knowledge! Guess Pokémon from silhouettes and climb the leaderboards."
+    />
     <meta property="twitter:image" content="/og-image.png" />
 
     <!-- PWA -->
@@ -31,10 +46,13 @@
     <link rel="mask-icon" href="/masked-icon.svg" color="#3B82F6" />
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Who's That Pokémon - Guess & Compete!</title>
   </head>
   <body>
